Corrected padding and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,8 @@ button:focus {
   box-shadow: none; }
 
 .p_120 {
-  padding-top: 70px;
-  padding-bottom: 70px; }
+  padding-top: 50px;
+  padding-bottom: 35px; }
 
 .pad_top {
   padding-top: 120px; }
@@ -2984,7 +2984,7 @@ h6 {
   background: #000410; }
 
 .f_title {
-  margin-bottom: 35px; }
+  margin-bottom: 10px; }
   .f_title h3 {
     color: #fff;
     font-size: 18px;
