--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,11 +4,11 @@
 	background: #000410;
 }
 .footer_inner{
-	
+
 }
 .f_widget{}
 .f_title{
-	margin-bottom: 35px;
+	margin-bottom: 10px;
 	h3{
 		color: #fff;
 		font-size: 18px;
