--- a/scss/_predefine.scss
+++ b/scss/_predefine.scss
@@ -34,8 +34,8 @@ button:focus{
 }
 
 .p_120{
-	padding-top: 70px;
-	padding-bottom: 70px;
+	padding-top: 50px;
+	padding-bottom: 35px;
 }
 .pad_top{
 	padding-top: 120px;
